# netdiscover

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  configure.ac  update-oui-database.sh
.github/workflows/: check-update-oui.yml  full-check.yml
doc/: UPDATE-CHECK  create-man.sh  netdiscover.8  netdiscover.txt
legacy/: 01_update-oui-database-legacy.sh
src/: Makefile.am  data_al.h  data_reply.c  data_request.c  data_unique.c  fhandle.c  fhandle.h  ifaces.c  ifaces.h  main.c  misc.c  misc.h  oui.h  screen.c  screen.h
trunk/: ChangeLog  update-oui-database.sh
trunk/src/: data_reply.c  misc.c  oui.h
